# kaffeine

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: c-cpp.yml  cmake-single-platform.yml  fedora.yml  linux.yml
include/: warningHandler.h
include/app/: app.h  trayIcon.h  tray_icon.h
main/: CMakeCache.txt
package/: metadata.json
package/contents/ui/: main.qml
src/: messageHandler.cpp  warningHandler.cpp
src/app/: app.cpp  trayIcon.cpp
src/tray_icon/: tray_icon.cpp
